Played with the html by adding text and css file by adding font, alignment and background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <link rel="stylesheet" href="style.css"/>
       <title>My Personal Website</title>
+      <author>Juan Toro</author>
   </head>
-  <body>Hello World!</body>
+  <body>
+  <header>Welcome to My Progress</header>
+  <p1>This is where i will be trying to implement what I've learned and comprehended </p1>
+  <p2>Essentionally this will be my coding playground</p2>
+<Ol>
+  So i currently like HTML, my reasons
+  <li>Easy to work out</li>
+  <li>It's not JavaScript</li>
+</Ol>
+  </body>
   <script src="script.js"></script>
 </html>
